hphp/test/zend/good/ext/standard/tests/streams/bug61115-1.php.skipif
<?php
if (getenv("USE_ZEND_ALLOC") === "0") {
    die("skip Zend MM disabled");
}
?> 