hphp/test/zend/bad/ext/standard/tests/file/disk_free_space_basic.php.skipif
<?php
if (getenv("TRAVIS") === "true") die("skip inaccurate on TravisCI");
?>